better intent: rename range to positionedAt
