# domain/src/main/java/com/damdamdeo/formula/domain/evaluation/StructuredReferencesExpression.java
@@ -1,15 +1,15 @@
 package com.damdamdeo.formula.domain.evaluation;
 
 import com.damdamdeo.formula.domain.Evaluated;
-import com.damdamdeo.formula.domain.Range;
+import com.damdamdeo.formula.domain.PositionedAt;
 import com.damdamdeo.formula.domain.Reference;
 
 import java.util.Objects;
 
-public record StructuredReferencesExpression(Reference reference, Range range) implements Expression {
+public record StructuredReferencesExpression(Reference reference, PositionedAt positionedAt) implements Expression {
     public StructuredReferencesExpression {
         Objects.requireNonNull(reference);
-        Objects.requireNonNull(range);
+        Objects.requireNonNull(positionedAt);
     }
 
     @Override
