# infrastructure/src/main/java/com/damdamdeo/formula/infrastructure/api/IntermediateResultDTO.java
@@ -7,11 +7,11 @@ import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@Schema(name = "IntermediateResult", required = true, requiredProperties = {"evaluatedAtStart", "evaluatedAtEnd", "processedInNanos", "range", "inputs", "value"})
+@Schema(name = "IntermediateResult", required = true, requiredProperties = {"evaluatedAtStart", "evaluatedAtEnd", "processedInNanos", "positionedAt", "inputs", "value"})
 public record IntermediateResultDTO(@Schema(required = true) ZonedDateTime evaluatedAtStart,
                                     @Schema(required = true) ZonedDateTime evaluatedAtEnd,
                                     @Schema(required = true) long processedInNanos,
-                                    @Schema(required = true) RangeDTO range,
+                                    @Schema(required = true) PositionedAtDTO positionedAt,
                                     @Schema(required = true) List<InputDTO> inputs,
                                     @Schema(required = true) String result) {
 
@@ -20,7 +20,7 @@ public record IntermediateResultDTO(@Schema(required = true) ZonedDateTime evalu
                 intermediateResult.evaluationProcessedIn().evaluatedAtStart().at(),
                 intermediateResult.evaluationProcessedIn().evaluatedAtEnd().at(),
                 intermediateResult.evaluationProcessedIn().in().toNanos(),
-                new RangeDTO(intermediateResult.range()),
+                new PositionedAtDTO(intermediateResult.positionedAt()),
                 intermediateResult.inputs().stream()
                         .map(InputDTO::new).collect(Collectors.toList()),
                 intermediateResult.value().value()
